# FacePhys

./: .gitignore  LICENSE  index.html  inference_worker.js  main.js  manifest.json  plot_worker.js  psd_worker.js  sw.js
native/: ANALYSIS.md  CMakeLists.txt  README.md
native/cmake/: armhf-toolchain.cmake
native/config/: nanopi_neo_st7735.json
native/include/facephys/: application_state.h  camera.h  config.h  face_detector.h  facephys_engine.h  gpio_line.h  image_io.h  image_preprocess.h  log.h  openmv_serial_camera.h  ring_buffer.h  signal_processor.h  st7735.h  state_mapping.h  tflite_model.h  tft_display.h  types.h  v4l2_camera.h
native/openmv/: openmv_facephys_stream.py
native/scripts/: build_armhf.sh  deploy_to_nanopi.sh  install_service.sh  run_facephys.sh  setup_permissions.sh
native/src/: application_state.cpp  camera.cpp  config.cpp  face_detector.cpp  facephys_engine.cpp  gpio_line.cpp  image_io.cpp  image_preprocess.cpp  log.cpp  main.cpp  openmv_serial_camera.cpp  signal_processor.cpp  st7735.cpp  tflite_model.cpp  tft_display.cpp  v4l2_camera.cpp
native/systemd/: facephys.service
native/tests/: test_rgb_resize.cpp  test_ring_buffer.cpp  test_state_mapping.cpp
native/tests/data/: black_4x4_02.ppm
native/tools/: compare_bvp_csv.py  inspect_tflite_models.cpp  run_offline_test.cpp  test_camera.cpp  test_tft.cpp
